--- a/example/umd/index.html
+++ b/example/umd/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>v-easy-components</title>
+    <link rel="icon" href="https://linkorg.club/logo.png">
     <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <!-- Introducing component library -->
     <script src="../../lib/index.js"></script>
