--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>TEST</title>
+  <title>v-easy-components test</title>
+  <link rel="icon" href="https://linkorg.club/logo.png">
   <meta charset="utf-8">
 </head>
 <body>
