style: format example

--- a/example/index.html
+++ b/example/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>v-easy-components test</title>
-  <link rel="icon" href="https://linkorg.club/logo.png">
-  <meta charset="utf-8">
-</head>
-<body>
-<div id="app"></div>
-</body>
+  <head>
+    <title>v-easy-components test</title>
+    <link rel="icon" href="https://linkorg.club/logo.png" />
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
