--- a/example/umd/index.html
+++ b/example/umd/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>v-easy-components</title>
-    <link rel="icon" href="https://linkorg.club/logo.png">
+    <link rel="icon" href="https://linkorg.club/logo.png" />
     <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <!-- Introducing component library -->
     <script src="../../lib/index.js"></script>
     <!-- Introducing style -->
-    <link rel="stylesheet" href="../../lib/theme-chalk/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../../lib/theme-chalk/index.css" />
+  </head>
+  <body>
     <div id="root">
-        <ve-button @click="$msg('Test')">Click</ve-button>
+      <ve-button @click="$msg('Test')">Click</ve-button>
     </div>
-</body>
-<script>
+  </body>
+  <script>
     new Vue({
-        el: '#root'
+      el: '#root'
     })
-</script>
+  </script>
 </html>
