docs: add umd case

--- a/example/umd/index.html
+++ b/example/umd/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <title>v-easy-components</title>
     <link rel="icon" href="https://linkorg.club/logo.png" />
-    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
-    <!-- Introducing component library -->
-    <script src="../../lib/index.js"></script>
-    <!-- Introducing style -->
-    <link rel="stylesheet" href="../../lib/theme-chalk/index.css" />
+    <script src="https://unpkg.com/vue@3.0.0-rc.10/dist/vue.global.js"></script>
+    <script src="dist/index.js"></script>
+    <link rel="stylesheet" href="dist/theme-chalk/index.css" />
   </head>
   <body>
-    <div id="root">
-      <ve-button @click="$msg('Test')">Click</ve-button>
-    </div>
+    <div id="root"></div>
   </body>
   <script>
-    new Vue({
-      el: '#root'
+    const { createApp } = Vue
+
+    const App = createApp({
+      template: `<ve-button @click="$message('Test')">Click</ve-button>`
     })
+    App.use(VEASY)
+
+    App.mount('#root')
   </script>
 </html>
