--- a/example/index.html
+++ b/example/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>v-easy-components test</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://linkorg.club/logo.png" />
     <meta charset="utf-8" />
   </head>
